Mon Jun  4 21:24:17 EEST 2007  Pekka Riikonen <priikone@silcnet.org>

	* Removed --enable-silc-plugin.  Added --with-silc-plugin.
	  Affected files are configure.ad, lib/configure.ad,
	  apps/irssi/configure.ad, apps/irssi/configure.in,
	  apps/irssi/scripts/Makefile.am,
	  apps/irssi/scripts/examples/Makefile.am,
	  apps/irssi/src/silc/core/silc/Makefile.am,
	  apps/irssi/src/fe-common/silc/Makefile.am.

Mon Jun  4 08:35:59 EEST 2007  Pekka Riikonen <priikone@silcnet.org>

	* SILC Client 1.1.

Sun Jun  3 14:00:09 EEST 2007  Pekka Riikonen <priikone@silcnet.org>

	* Fixed DESTDIR handling in make install.

Sat Jun  2 21:04:32 EEST 2007  Pekka Riikonen <priikone@silcnet.org>

	* SIM modules are not delivered to SILC CLient distribution
	  anymore.

	* Changed default installation path from /usr/local/silc to
	  /usr/local for all distributions.

	* Removed --with-etcdir and --with-docdir.  The etcdir is now
	  the system's default.  The Docdir is system's default.

Sat Jun  2 00:51:57 EEST 2007  Pekka Riikonen <priikone@silcnet.org>

	* If public key/private key loading fails set the return
	  pointer to NULL.  Affected file is lib/silccrypt/silcpkcs.c.

	* If private key loading fails in silc_load_key_pair free the
	  loaded public key.  Affected file is
	  lib/silcapputil/silcapputil.c.

	* Fixed key pair loading crash with SILC Plugin if key pair
	  loading fails.  Affected file is
	  apps/irssi/src/silc/core/silc-core.c.

	* Fixed SILC Client help and script file installation path
	  to go to prefix/share/silc.  Affected files are
	  apps/irssi/src/scripts/Makefile.am and
	  apps/irssi/docs/help/Makefile.am.gen.

Thu May 31 16:49:13 EEST 2007  Pekka Riikonen <priikone@silcnet.org>

	* Fixed UTC offset minutes to be actually minutes.  Affected
	  file is lib/silcutil/silctime.c.

Thu May 31 09:40:56 EEST 2007  Pekka Riikonen <priikone@silcnet.org>

	* SILC Toolkit 1.1.

	* Added support for checking for timezone and tm_gmtoff.