@@ -1,3 +1,9 @@
+Mon Jun  4 22:02:53 CEST 2007  Jochen Eisinger <jochen@penguin-breeder.org>
+
+	* Only destroy sendbuffers, if they still exist (they cease to
+	  exist during /upgrade).  Affected file is
+	  apps/irssi/src/silc/core/silc-servers.c
+
 Mon Jun  4 21:24:17 EEST 2007  Pekka Riikonen <priikone@silcnet.org>
 
 	* Removed --enable-silc-plugin.  Added --with-silc-plugin.
